--- a/css/styles.css
+++ b/css/styles.css
@@ -2856,7 +2856,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-    margin-top: 43.75rem;
+    margin-top: 55em;
 }
 
 .btn-cardapio {
