--- a/css/styles.css
+++ b/css/styles.css
@@ -11090,7 +11090,8 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: url("../assets/img/bg-masthead.png");
+  /* background: url("../assets/img/bg-masthead.png"); */
+  background-color: #000;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
