--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,10 +1,10 @@
 #carouselExampleIndicators{
-    height: 900px;
+    height: 95vh;
 }
 
 /* Estilo personalizado para o carousel */
 .carousel-item img {
-    height: 900px   ;
+    height: 95vh   ;
     /* Define a altura das imagens do carousel */
 }
 
