--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,7 +4,7 @@
 
 /* Estilo personalizado para o carousel */
 .carousel-item img {
-    height: 95vh   ;
+    height: 95vh  ;
     /* Define a altura das imagens do carousel */
 }
 
@@ -35,6 +35,12 @@
     /* Posiciona a seta direita à direita */
 }
 
-.carousel-item {
-    transition-duration: 0ms !important;
-}
+    .carousel-item {
+        transform: translateX(-100%);
+        transition: transform 0.5s ease-in-out;
+    }
+    .carousel-item.active {
+        transform: translateX(0);
+    }
+
+
